--- a/css/typography.css
+++ b/css/typography.css
@@ -10,3 +10,15 @@ font-family: 'Lobster', cursive;
 font-family: 'Montserrat', sans-serif;
 font-family: 'Quicksand', sans-serif;
 */
+
+body {
+  font-family: "Comfortaa", cursive;
+}
+
+h2 {
+  font-family: "Dosis", sans-serif;
+}
+
+h3 {
+  font-family: "Quicksand", sans-serif;
+}
