<header> element styled: Added margins and paddings to itself and its different children.

--- a/css/general-style.css
+++ b/css/general-style.css
@@ -6,3 +6,18 @@
   box-sizing: border-box;
 }
 /* xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx */
+
+/* HEADER
+----------------------------------------------------- */
+header {
+  margin: 30px;
+}
+
+nav {
+  padding: 20px 0;
+}
+
+nav a {
+  padding: 0 10px;
+}
+/* xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx */
