--- a/css/general-style.css
+++ b/css/general-style.css
@@ -10,7 +10,7 @@
 /* HEADER
 ----------------------------------------------------- */
 header {
-  margin: 30px;
+  padding: 30px 0 10px 0;
 }
 
 nav {
