--- a/css/general-style.css
+++ b/css/general-style.css
@@ -10,7 +10,7 @@
 /* HEADER
 ----------------------------------------------------- */
 header {
-  padding: 30px 0 10px 0;
+  padding: 30px 0 0px 0;
 }
 
 nav {
@@ -18,6 +18,7 @@ nav {
 }
 
 nav a {
-  padding: 0 10px;
+  padding-bottom: 4px;
+  margin: 0 10px;
 }
 /* xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx */
