--- a/css/typography.css
+++ b/css/typography.css
@@ -11,6 +11,7 @@ font-family: 'Montserrat', sans-serif;
 font-family: 'Quicksand', sans-serif;
 */
 
+/* FONT FAMILIES : */
 body {
   font-family: "Comfortaa", cursive;
 }
@@ -21,4 +22,14 @@ h2 {
 
 h3 {
   font-family: "Quicksand", sans-serif;
+}
+
+/* TEXT FEATURES : */
+a {
+  text-decoration: none;
+}
+
+header {
+  text-align: center;
+  font-weight: bold;
 }
