--- a/css/general-style.css
+++ b/css/general-style.css
@@ -10,7 +10,7 @@
 /* HEADER
 ----------------------------------------------------- */
 header {
-  padding: 30px 0 0px 0;
+  padding: 30px 0 10px 0;
 }
 
 nav {
@@ -20,5 +20,33 @@ nav {
 nav a {
   padding-bottom: 4px;
   margin: 0 10px;
+}
+/* xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx */
+
+/* FORM
+----------------------------------------------------- */
+form {
+  margin: 30px auto;
+}
+
+.input-box {
+  padding: 20px 0;
+  width: 60%;
+  margin: 15px auto;
+  border-radius: 15px;
+}
+
+form p {
+  margin-bottom: 20px;
+}
+
+form input {
+  margin: 15px 0;
+  padding: 8px 5px;
+  border-radius: 5px;
+}
+
+input:focus {
+  outline: none;
 }
 /* xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx */
