<button> element modified: Padding added. Border set to transparent. Border radius of 4px added.

--- a/css/general-style.css
+++ b/css/general-style.css
@@ -49,4 +49,10 @@ form input {
 input:focus {
   outline: none;
 }
+
+button {
+  padding: 10px 25px;
+  border: transparent;
+  border-radius: 4px;
+}
 /* xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx */
