The following changes were made: Created comment of font sizes and moved the <h2> element under it. Changed the font-sizes of the <section> element with the class of 'section-one' and its children <i> elements.

--- a/css/typography.css
+++ b/css/typography.css
@@ -24,7 +24,16 @@ h3 {
   font-family: "Quicksand", sans-serif;
 }
 
-/* TEXT FEATURES : */
+/* FONT SIZES : */
+h2 {
+  font-size: 2rem;
+}
+
+.section-one i {
+  font-size: 3rem;
+}
+
+/* OTHER TEXT FEATURES : */
 a {
   text-decoration: none;
 }
@@ -36,8 +45,4 @@ header {
 
 form {
   text-align: center;
-}
-
-h2 {
-  font-size: 2rem;
 }
