Added padding to the <div> element with the class name of 'video-container'.

--- a/css/general-style.css
+++ b/css/general-style.css
@@ -72,3 +72,10 @@ button {
 .feature-box * {
   padding-bottom: 10px;
 }
+
+/* VIDEO
+----------------------------------------------------- */
+.video-container {
+  padding: 50px 0;
+}
+/* xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx */
