--- a/css/colors.css
+++ b/css/colors.css
@@ -27,6 +27,7 @@
   --color-9: #f2d0a4;
   --color-10: #e7e7e7;
   --color-11: #202020;
+  --color-12: #3f3f3f;
 }
 /* xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx */
 
@@ -49,16 +50,17 @@ button {
   color: var(--color-10);
 }
 
-.section-one {
-  background: var(--background);
-}
-
 .section-one i {
   color: var(--color-2);
 }
 
 .video-container {
   background-color: var(--color-11);
+}
+
+.section-two-container {
+  background: var(--color-12);
+  color: white;
 }
 /* xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx */
 
