Changed font-size of the <h4> element and changed line-height of the <body> element.

--- a/css/typography.css
+++ b/css/typography.css
@@ -29,6 +29,10 @@ h2 {
   font-size: 2rem;
 }
 
+h4 {
+  font-size: 1.6rem;
+}
+
 .section-one i {
   font-size: 3rem;
 }
@@ -45,4 +49,8 @@ header {
 
 form {
   text-align: center;
+}
+
+body {
+  line-height: 1.5rem;
 }
