--- a/css/general-style.css
+++ b/css/general-style.css
@@ -10,25 +10,33 @@
 /* HEADER
 ----------------------------------------------------- */
 header {
-  padding: 30px 0 10px 0;
-  min-height: 180px;
-  height: 21vh;
+  padding: 30px 0 0 0;
+}
+
+h1 {
+  padding-bottom: 20px;
 }
 
 nav {
-  padding: 20px 0;
+  padding: 15px 5px;
+  display: flex;
+  justify-content: space-evenly;
 }
 
 nav a {
   padding-bottom: 4px;
-  margin: 0 10px;
+}
+
+video {
+  height: 100%;
+  max-width: 100%;
 }
 /* xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx */
 
 /* FORM
 ----------------------------------------------------- */
 .form-container {
-  height: 39vh;
+  height: 40vh;
   display: flex;
   align-items: center;
 }
@@ -72,7 +80,7 @@ button {
 /* VIDEO
 ----------------------------------------------------- */
 .video-container {
-  height: 40vh;
+  height: 35vh;
   display: flex;
   align-items: center;
 }
