--- a/css/general-style.css
+++ b/css/general-style.css
@@ -11,6 +11,7 @@
 ----------------------------------------------------- */
 header {
   padding: 30px 0 0 0;
+  min-height: 205px;
 }
 
 h1 {
@@ -26,23 +27,18 @@ nav {
 nav a {
   padding-bottom: 4px;
 }
-
-video {
-  height: 100%;
-  max-width: 100%;
-}
 /* xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx */
 
 /* FORM
 ----------------------------------------------------- */
 .form-container {
-  min-height: 40vh;
+  min-height: 45vh;
   display: flex;
   align-items: center;
 }
 
 form {
-  margin: 30px auto;
+  margin: 0 auto;
 }
 
 h2 {
@@ -84,6 +80,11 @@ button {
   display: flex;
   align-items: center;
 }
+
+video {
+  height: 100%;
+  max-width: 100%;
+}
 /* xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx */
 
 /* SECTION ONE
@@ -95,7 +96,7 @@ button {
 .feature-box {
   width: 95%;
   padding-left: 10px;
-  margin-top: 40px;
+  margin-top: 9vh;
 }
 
 .feature-box * {
@@ -119,5 +120,60 @@ button {
 
 h4 {
   padding-bottom: 20px;
+}
+/* xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx */
+
+/* SECTION THREE
+----------------------------------------------------- */
+.section-three {
+  width: 80%;
+  margin: 100px auto;
+}
+
+.pricing-box {
+  margin: 20px auto;
+  border-radius: 24px;
+  padding: 20px;
+  transition: 0.5s;
+  height: 500px;
+}
+
+.pricing-box-title {
+  padding: 10px 0 20px 0;
+}
+
+.pricing-box-title i {
+  padding-bottom: 10px;
+}
+
+.subscription-info {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  border-radius: 10px;
+  height: 350px;
+  padding: 20px;
+}
+
+.prices {
+  padding: 15px;
+  margin: 0 20px;
+}
+
+.yearly {
+  display: flex;
+  justify-content: center;
+}
+
+.yearly p {
+  padding: 0 5px;
+}
+
+.benefits-title {
+  padding-bottom: 10px;
+}
+
+.benefits p {
+  padding-bottom: 10px;
 }
 /* xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx */
