--- a/css/general-style.css
+++ b/css/general-style.css
@@ -135,7 +135,7 @@ h4 {
   border-radius: 24px;
   padding: 20px;
   transition: 0.5s;
-  height: 500px;
+  min-height: 500px;
 }
 
 .pricing-box-title {
@@ -170,7 +170,7 @@ h4 {
 }
 
 .benefits-title {
-  padding-bottom: 10px;
+  padding: 10px;
 }
 
 .benefits p {
