--- a/css/general-style.css
+++ b/css/general-style.css
@@ -151,7 +151,7 @@ h4 {
   flex-direction: column;
   justify-content: space-between;
   border-radius: 10px;
-  height: 350px;
+  min-height: 350px;
   padding: 20px;
 }
 
@@ -175,5 +175,9 @@ h4 {
 
 .benefits p {
   padding-bottom: 10px;
+}
+
+.prices-btn {
+  margin-bottom: 5px;
 }
 /* xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx */
