--- a/css/general-style.css
+++ b/css/general-style.css
@@ -177,3 +177,42 @@ h4 {
   padding-bottom: 10px;
 }
 /* xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx */
+
+/* FOOTER
+----------------------------------------------------- */
+footer {
+  padding: 20px 20px 40px 20px;
+}
+
+.footer-nav {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 20px;
+}
+
+.footer-nav a {
+  margin: 0 10px;
+  padding-bottom: 4px;
+}
+
+.developer-links:hover {
+  border: none;
+}
+
+.developer-links i:hover {
+  transform: scale(1.5);
+}
+
+.developer-links i {
+  padding: 0 5px;
+}
+
+.copyright {
+  display: flex;
+}
+
+.footer-logo {
+  margin-top: -10px;
+  padding: 0 5px;
+}
+/* xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx */
