--- a/css/typography.css
+++ b/css/typography.css
@@ -16,6 +16,11 @@ body {
   font-family: "Comfortaa", cursive;
 }
 
+nav,
+.footer-nav {
+  font-family: "Josefin Sans", sans-serif;
+}
+
 h2 {
   font-family: "Dosis", sans-serif;
 }
@@ -42,6 +47,11 @@ h4 {
   font-size: 1.3rem;
 }
 
+nav,
+.footer-nav {
+  font-size: 1.2rem;
+}
+
 .section-one i {
   font-size: 3rem;
 }
@@ -61,7 +71,6 @@ a {
 
 header {
   text-align: center;
-  font-weight: bold;
 }
 
 form {
