--- a/css/general-style.css
+++ b/css/general-style.css
@@ -212,7 +212,12 @@ footer {
 }
 
 .footer-logo {
-  margin-top: -10px;
-  padding: 0 5px;
+  object-fit: cover;
+  margin: -10px 5px 0 5px;
+}
+
+.credits-container {
+  display: flex;
+  flex-wrap: wrap;
 }
 /* xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx */
