Change the following: - Set the justify content of the class 'video-container' to center. - Add max width to the class named 'pricing-box'.

--- a/css/general-style.css
+++ b/css/general-style.css
@@ -79,6 +79,7 @@ button {
   min-height: 35vh;
   display: flex;
   align-items: center;
+  justify-content: center;
 }
 
 video {
@@ -136,6 +137,7 @@ h4 {
   padding: 20px;
   transition: 0.5s;
   min-height: 500px;
+  max-width: 350px;
 }
 
 .pricing-box-title {
