Make the following changes: - Add a comment for the sticky class. - Add the following into the class named 'sticky': position to be fixed, width to be 100vw, top position to be 0, opacity to be 0.9. - Add the same changes that were made to the <button> element to the class named 'form-btn'. - Change opacity of the class named 'form-btn' to 0.8 when hovered.

--- a/css/general-style.css
+++ b/css/general-style.css
@@ -66,10 +66,15 @@ input:focus {
   outline: none;
 }
 
-button {
+button,
+.form-btn {
   padding: 10px 25px;
   border: transparent;
   border-radius: 4px;
+}
+
+.form-btn:hover {
+  opacity: 0.8;
 }
 /* xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx */
 
@@ -221,5 +226,15 @@ footer {
 .credits-container {
   display: flex;
   flex-wrap: wrap;
+}
+/* xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx */
+
+/* STICKY
+----------------------------------------------------- */
+.sticky {
+  position: fixed;
+  width: 100vw;
+  top: 0;
+  opacity: 0.9;
 }
 /* xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx */
