Make the following changes: - Add background color to the <nav> element. - Add a background and color to the class named 'form-btn'.

--- a/css/colors.css
+++ b/css/colors.css
@@ -110,11 +110,13 @@ a {
 }
 
 header,
+nav,
 footer {
   background-color: var(--background);
 }
 
-button {
+button,
+.form-btn {
   background: var(--secondary);
   color: var(--color-10);
 }
