Make the following changes: - Transform the class named 'pricing-box' to scale 1.1 when hovered. - Changed the display of the 'hidden' class to block.

--- a/css/media-query.css
+++ b/css/media-query.css
@@ -18,4 +18,12 @@
     flex-direction: column;
     align-items: center;
   }
+
+  .pricing-box:hover {
+    transform: scale(1.1);
+  }
+
+  .hidden {
+    display: block;
+  }
 }
