--- a/css/general-style.css
+++ b/css/general-style.css
@@ -11,7 +11,6 @@
 ----------------------------------------------------- */
 header {
   padding: 30px 0 0 0;
-  min-height: 205px;
 }
 
 h1 {
@@ -231,6 +230,12 @@ footer {
   width: 100vw;
   top: 0;
   opacity: 0.9;
+}
+
+.none-sticky {
+  position: initial;
+  width: 100vw;
+  opacity: 1;
 }
 
 .hidden {
