Add a position of flex to the <header>, and change the padding, margin, size, etc. of itself and its children.

--- a/css/media-query.css
+++ b/css/media-query.css
@@ -26,4 +26,25 @@
   .hidden {
     display: block;
   }
+
+  header {
+    padding: 5px 20px 0 30px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    position: fixed;
+    width: 100vw;
+    z-index: 999;
+    height: 70px;
+    opacity: 0.9;
+  }
+
+  nav {
+    width: 60%;
+  }
+
+  header img {
+    width: 120px;
+    padding-top: 10px;
+  }
 }
